fixed the button on mobile devices

--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -1587,3 +1587,8 @@ footer h4::after, footer h5::after {
     font-size: 1.1rem;
     margin-bottom: 2px;
 }
+
+.navbar-toggler .fa-bars {
+    color: #343a40; /* A dark color */
+    font-size: 1.5rem; /* Adjust size if you like */
+}
